@@ -52,7 +52,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  */
-public class SignedEncryptedTest {
+class SignedEncryptedTest {
 
     private static final String SAMPLE_MSG = "<?xml version=\"1.0\" encoding=\"UTF-8\"?>"
             + "<SOAP-ENV:Envelope "
@@ -78,11 +78,11 @@ public class SignedEncryptedTest {
      * @throws Exception
      */
     @Test
-    public void decryptUsingXalanTransformer() throws Exception {
+    void decryptUsingXalanTransformer() throws Exception {
         try {
             Class<?> tf = getClass().getClassLoader().loadClass(
                     "org.apache.xalan.processor.TransformerFactoryImpl");
-            secureAndVerify((TransformerFactory) tf.newInstance(), false);
+            secureAndVerify((TransformerFactory) tf.getDeclaredConstructor().newInstance(), false);
         } catch (ClassNotFoundException e) {
             System.out.println(
                     "org.apache.xalan.processor.TransformerFactoryImpl not found, skipping test");
@@ -96,7 +96,7 @@ public class SignedEncryptedTest {
      * @throws Exception
      */
     @Test
-    public void decryptUsingSunDOMSerializer() throws Exception {
+    void decryptUsingSunDOMSerializer() throws Exception {
         secureAndVerify(null, true);
     }
 
@@ -144,13 +144,13 @@ public class SignedEncryptedTest {
 
         document = cipher.doFinal(document, element, true);
 
-        XMLCipher deCipher = null;
+        XMLCipher deCipher;
         if (useDocumentSerializer) {
             deCipher = XMLCipher.getInstance(new DocumentSerializer(true), XMLCipher.AES_128);
         } else {
             TransformSerializer serializer = new TransformSerializer(true);
             Field f = serializer.getClass().getDeclaredField("transformerFactory");
-            f.setAccessible(true);
+            f.setAccessible(true); // NOPMD
             f.set(serializer, transformerFactory);
             deCipher = XMLCipher.getInstance(serializer, XMLCipher.AES_128);
         }
