@@ -18,7 +18,8 @@
  */
 package org.apache.xml.security.test.dom.signature;
 
-import java.io.UnsupportedEncodingException;
+import java.lang.System.Logger;
+import java.lang.System.Logger.Level;
 import java.net.URLDecoder;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -31,6 +32,8 @@ import javax.xml.xpath.XPathExpressionException;
 import javax.xml.xpath.XPathFactory;
 
 import org.apache.xml.security.signature.XMLSignatureInput;
+import org.apache.xml.security.signature.XMLSignatureNodeInput;
+import org.apache.xml.security.signature.XMLSignatureNodeSetInput;
 import org.apache.xml.security.test.dom.DSNamespaceContext;
 import org.apache.xml.security.utils.resolver.ResourceResolverContext;
 import org.apache.xml.security.utils.resolver.ResourceResolverException;
@@ -38,13 +41,15 @@ import org.apache.xml.security.utils.resolver.ResourceResolverSpi;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
+
 /**
  * An implementation of a resource resolver, which evaluates xpointer expressions.
  *
  */
 public class XPointerResourceResolver extends ResourceResolverSpi {
-    private static final org.slf4j.Logger LOG =
-        org.slf4j.LoggerFactory.getLogger(XPointerResourceResolver.class);
+
+    private static final Logger LOG = System.getLogger(XPointerResourceResolver.class.getName());
 
     private static final String XP_OPEN = "xpointer(";
     private static final String XNS_OPEN = "xmlns(";
@@ -67,14 +72,7 @@ public class XPointerResourceResolver extends ResourceResolverSpi {
             return false;
         }
 
-        String xpURI;
-        try {
-            xpURI = URLDecoder.decode(v, "utf-8");
-        } catch (UnsupportedEncodingException e) {
-            LOG.warn("utf-8 not a valid encoding",e);
-            return false;
-        }
-
+        String xpURI = URLDecoder.decode(v, UTF_8);
         String[] parts = xpURI.substring(1).split("\\s");
 
         // plain ID reference.
@@ -93,9 +91,7 @@ public class XPointerResourceResolver extends ResourceResolverSpi {
             return false;
         }
 
-        LOG.debug("xpURI = " + xpURI);
-        LOG.debug("BaseURI = " + context.baseUri);
-
+        LOG.log(Level.DEBUG, "xpURI={0}, BaseURI={1}", xpURI, context.baseUri);
         return true;
     }
 
@@ -108,14 +104,7 @@ public class XPointerResourceResolver extends ResourceResolverSpi {
             return null;
         }
 
-        String xpURI;
-        try {
-            xpURI = URLDecoder.decode(v, "utf-8");
-        } catch (UnsupportedEncodingException e) {
-            LOG.warn("utf-8 not a valid encoding ", e);
-            return null;
-        }
-
+        String xpURI = URLDecoder.decode(v, UTF_8);
         String[] parts = xpURI.substring(1).split("\\s");
 
         int i = 0;
@@ -178,10 +167,9 @@ public class XPointerResourceResolver extends ResourceResolverSpi {
                 }
             }
 
-            XMLSignatureInput result = null;
-
+            final XMLSignatureInput result;
             if (node != null) {
-                result = new XMLSignatureInput(node);
+                result = new XMLSignatureNodeInput(node);
             } else if (nodes != null) {
                 Set<Node> nodeSet = new HashSet<>(nodes.getLength());
 
@@ -189,7 +177,7 @@ public class XPointerResourceResolver extends ResourceResolverSpi {
                     nodeSet.add(nodes.item(j));
                 }
 
-                result = new XMLSignatureInput(nodeSet);
+                result = new XMLSignatureNodeSetInput(nodeSet);
             } else {
                 return null;
             }
